--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -60,6 +60,7 @@
 
     <TextView
         android:id="@+id/verticalList_Title"
+        style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
