--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -65,9 +65,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_rectangle"
+            android:padding="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:padding="10dp">
+            app:layout_constraintTop_toTopOf="parent">
+
             <EditText
                 android:id="@+id/diary_edit_TitleText"
                 android:layout_width="match_parent"
@@ -106,11 +107,12 @@
             android:id="@+id/diary_edit_descriptionBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:background="@drawable/rounded_rectangle"
-            android:padding="10dp">
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintLeft_toLeftOf="parent">
+
             <TextView
                 android:id="@+id/diary_edit_descriptionLabel"
                 android:layout_width="match_parent"
@@ -118,7 +120,7 @@
                 android:text="내용"
                 android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/diary_edit_DescriptionText"
@@ -126,9 +128,9 @@
                 android:layout_height="0dp"
                 android:textSize="20sp"
                 android:scrollbars="vertical"
-                app:layout_constraintTop_toBottomOf="@id/diary_edit_descriptionLabel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/diary_edit_descriptionLabel" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
