--- a/app/src/main/res/layout/game_infowindow_bubble.xml
+++ b/app/src/main/res/layout/game_infowindow_bubble.xml
@@ -3,22 +3,29 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/game_custom_infowindow" >
-    <ImageView android:id="@+id/bubble_image"
+    android:background="@drawable/game_custom_infowindow">
+
+    <ImageView
+        android:id="@+id/bubble_image"
         android:layout_width="65sp"
         android:layout_height="65sp"
         android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
-        android:orientation="vertical" >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="horizontal" >
-            <TextView android:id="@+id/bubble_title"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/bubble_title"
+                style="@style/CustomFontStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxEms="17"
@@ -26,13 +33,19 @@
                 android:layout_weight="1"
                 android:text="Title" />
         </LinearLayout>
-        <TextView android:id="@+id/bubble_description"
+
+        <TextView
+            android:id="@+id/bubble_description"
+            style="@style/CustomFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:maxEms="17"
             android:text="Description" />
-        <TextView android:id="@+id/bubble_subdescription"
+
+        <TextView
+            android:id="@+id/bubble_subdescription"
+            style="@style/CustomFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
