--- a/app/src/main/res/layout/layout_after_game_item.xml
+++ b/app/src/main/res/layout/layout_after_game_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="190dp">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
     <android.support.constraint.Guideline
         android:id="@+id/after_game_vertical_right_guideline1"
         android:layout_width="wrap_content"
@@ -56,21 +58,25 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/after_game_vertical_mid_guideline"
-        app:layout_constraintTop_toTopOf="@id/after_game_horizontal_up_guideline"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/after_game_horizontal_up_guideline" />
+
     <TextView
         android:id="@+id/after_game_show_country_name"
+        style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="right"
         android:layout_marginRight="10dp"
         app:layout_constraintBottom_toTopOf="@id/after_game_show_place_name"
         app:layout_constraintLeft_toRightOf="@id/after_game_vertical_mid_guideline"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
+
     <TextView
         android:id="@+id/after_game_show_place_name"
+        style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="right"
