--- a/app/src/main/res/layout/layout_diary_row.xml
+++ b/app/src/main/res/layout/layout_diary_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="false"
     android:padding="10dp">
 
@@ -10,64 +10,71 @@
         android:id="@+id/diary_Row_Thumbnail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="2:1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/coord2"
         android:scaleType="centerInside"
         android:clickable="true"
-        />
+        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/diary_Row_NameTag"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.35"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@id/diary_Row_BottomMargin"
-        android:clickable="false">
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintLeft_toLeftOf="parent">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@color/black_overlay"
-            android:clickable="false"/>
+            android:clickable="false" />
+
         <TextView
             android:id="@+id/diary_Row_Name"
+            style="@style/CustomFontStyle"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintWidth_percent="0.9"
-            app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/diary_Row_Date"
             android:text="○○ 여행"
             android:textStyle="italic"
             android:textColor="#FFFFFF"
-            android:textSize="25sp"/>
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@id/diary_Row_Date"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintWidth_percent="0.9" />
+
         <TextView
             android:id="@+id/diary_Row_Date"
+            style="@style/CustomFontStyle"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintWidth_percent="0.8"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/diary_Row_TitleMargin"
             android:text="1970.01.01 ~ 1970.01.01"
             android:textStyle="italic"
             android:textColor="#FFFFFF"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@id/diary_Row_TitleMargin"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintWidth_percent="0.8" />
+
         <View
             android:id="@+id/diary_Row_TitleMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent" />
     </android.support.constraint.ConstraintLayout>
+
     <View
         android:id="@+id/diary_Row_BottomMargin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
