--- a/app/src/main/res/layout/activity_diary_new_image.xml
+++ b/app/src/main/res/layout/activity_diary_new_image.xml
@@ -40,4 +40,10 @@
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <include
+        android:id="@+id/diary_newImage_LoadingScreen"
+        layout="@layout/layout_loading_screen"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
