--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -145,6 +145,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toRightOf="parent" />
+
     <ImageButton
         android:id="@+id/diary_main_NewDiary"
         android:layout_width="0dp"
@@ -181,36 +182,40 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryLight"
+            android:clickable="true"
+            android:focusable="auto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.6"
-            android:clickable="true"
-            android:focusable="auto">
+            app:layout_constraintWidth_percent="0.6">
+
             <View
                 android:id="@+id/diary_main_menuInnerEdge1"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintWidth_percent="0.1"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.1" />
+
             <View
                 android:id="@+id/diary_main_menuInnerEdge2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintWidth_percent="0.1"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintWidth_percent="0.1" />
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintWidth_percent="0.8"
+                app:layout_constraintBottom_toTopOf="@id/diary_main_menuInnerEdge2"
                 app:layout_constraintLeft_toRightOf="@id/diary_main_menuInnerEdge1"
                 app:layout_constraintTop_toBottomOf="@id/diary_main_menuInnerEdge1"
-                app:layout_constraintBottom_toTopOf="@id/diary_main_menuInnerEdge2">
+                app:layout_constraintWidth_percent="0.8">
+
                 <Button
                     android:id="@+id/diary_main_menuEdit"
                     android:layout_width="match_parent"
@@ -223,7 +228,7 @@
                     android:onClick="diary_main_EditStart"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/diary_main_menuShare"
@@ -238,7 +243,7 @@
                     android:layout_marginBottom="10dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/diary_main_menuDelete"
