--- a/app/src/main/res/layout/layout_zoomin.xml
+++ b/app/src/main/res/layout/layout_zoomin.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/diary_ZoomIn_Root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,6 +30,27 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="@id/diary_ZoomIn_ZoomImage"
+            app:layout_constraintTop_toTopOf="@id/diary_ZoomIn_ZoomImage"
+            app:layout_constraintBottom_toBottomOf="@id/diary_ZoomIn_ZoomImage"
+            android:src="@drawable/moveleft"
+            android:clickable="false"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintRight_toRightOf="@id/diary_ZoomIn_ZoomImage"
+            app:layout_constraintTop_toTopOf="@id/diary_ZoomIn_ZoomImage"
+            app:layout_constraintBottom_toBottomOf="@id/diary_ZoomIn_ZoomImage"
+            android:src="@drawable/moveright"
+            android:clickable="false"/>
+
         <android.support.constraint.ConstraintLayout
             android:id="@+id/diary_ZoomIn_NameBox"
             android:layout_width="match_parent"
@@ -48,9 +68,10 @@
                 android:gravity="center"
                 android:text="------"
                 android:textSize="30sp"
-                app:layout_constraintTop_toTopOf="@id/diary_ZoomIn_NameBox"
+                android:layout_marginHorizontal="20sp"
                 app:layout_constraintBottom_toTopOf="@id/diary_ZoomIn_ZoomName2"
-                android:layout_marginHorizontal="20sp" />
+                app:layout_constraintTop_toTopOf="@id/diary_ZoomIn_NameBox" />
+
             <TextView
                 android:id="@+id/diary_ZoomIn_ZoomName2"
                 android:layout_width="match_parent"
@@ -58,9 +79,9 @@
                 android:gravity="center"
                 android:text="------"
                 android:textSize="30sp"
-                app:layout_constraintTop_toBottomOf="@id/diary_ZoomIn_ZoomName1"
+                android:layout_marginHorizontal="20sp"
                 app:layout_constraintBottom_toBottomOf="@id/diary_ZoomIn_NameBox"
-                android:layout_marginHorizontal="20sp" />
+                app:layout_constraintTop_toBottomOf="@id/diary_ZoomIn_ZoomName1" />
         </android.support.constraint.ConstraintLayout>
 
         <Button
