--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/view_separator"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#036"
-        app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cl_fragment_main"
         android:layout_width="match_parent"
@@ -22,7 +15,6 @@
         android:layout_height="0dp"
         android:padding="5dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/login_upper_guideline"
         app:layout_constraintHeight_percent="0.065"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -32,12 +24,21 @@
         android:id="@+id/tv_top_back"
         style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8sp"
         android:text="Back"
         android:textColor="#048"
         android:textSize="25sp"
+        android:gravity="bottom"
         app:layout_constraintBottom_toBottomOf="@id/iv_login_logo"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_separator"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#036"
+        app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />
 
 </android.support.constraint.ConstraintLayout>
