--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,42 +21,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/guide_profile_horizontal_boundary" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/profile_upper_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.065" />
-
     <TextView
-        android:id="@+id/profile_back_textview"
+        android:id="@+id/tv_profile_top_back"
         style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="Back"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/profile_upper_guideline"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <ImageView
-        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="5dp"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/profile_upper_guideline"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8sp"
+        android:text="Back"
+        android:textColor="#048"
+        android:textSize="25sp"
+        android:gravity="bottom"
+        app:layout_constraintHeight_percent="0.065"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="@id/profile_upper_guideline"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_profile_vertical_left"
