--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/login_mid_gradient"
-        app:layout_constraintBottom_toTopOf="@id/guide_sign_up_horizontal_boundary"
+        app:layout_constraintBottom_toTopOf="@id/sign_up_bottom_gradient"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -18,16 +18,9 @@
         android:layout_height="0dp"
         android:background="@drawable/login_bottom_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guide_sign_up_horizontal_boundary" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_horizontal_boundary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.80" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_sign_up_horizontal_top"
@@ -38,11 +31,10 @@
 
     <TextView
         android:id="@+id/sign_up_textView"
+        style="@style/CustomFontStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/CustomFontStyle"
         android:text="─ Create an account ─"
-        android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/guide_sign_up_horizontal_top"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -166,13 +158,15 @@
         android:id="@+id/btn_sign_up"
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
-        android:layout_height="33sp"
+        android:layout_height="0dp"
         android:background="#0d2758"
         android:text="Sign Up"
         android:textColor="#fff"
-        android:textSize="17sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/sign_up_bottom_gradient"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_min="33sp"
+        app:layout_constraintHeight_percent="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/sign_up_bottom_gradient"
         app:layout_constraintWidth_percent="0.6" />
